eks-sandbox/k8s_http_nlb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-nlb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-nlb
  template:
    metadata:
      labels:
        app: http-nlb
    spec:
      containers:
        - name: http
          image: louiskimlevu/http:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: http-nlb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
