eks-sandbox/k8s_http_istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-istio
  template:
    metadata:
      labels:
        app: http-istio
    spec:
      containers:
        - name: http
          image: louiskimlevu/http:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-istio
  annotations:
spec:
  selector:
    app: http-istio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-istio
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-istio
spec:
  hosts:
  - "test.com"
  gateways:
  - http-istio
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: http-istio # # interpreted as http-istio.default.svc.cluster.local
